# RaBitQ-Library

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  example.sh  example_py.sh  index.html  pyproject.toml  setup.py
.github/workflows/: test.yaml  test.yml
cmake/: cpu_features.cmake
compact_code/: index.html
contrib/: CMakeLists.txt  README.md  dataset.h  dataset_example.cpp  test_normalization.cpp
docs/docs/: quick_start.md
include/rabitqlib/: defines.hpp
include/rabitqlib/fastscan/: fastscan.hpp  highacc_fastscan.hpp
include/rabitqlib/index/: estimator.hpp  lut.hpp  query.hpp
include/rabitqlib/index/hnsw/: hnsw.hpp
include/rabitqlib/index/ivf/: cluster.hpp  initializer.hpp  ivf.hpp
include/rabitqlib/index/symqg/: qg.hpp  qg_builder.hpp
include/rabitqlib/quantization/: data_layout.hpp  pack_excode.hpp  rabitq.hpp  rabitq_impl.hpp
include/rabitqlib/utils/: array.hpp  buffer.hpp  fht_avx.hpp  hashset.hpp  io.hpp  memory.hpp  rotator.hpp  space.hpp  stopw.hpp  tools.hpp  warmup_space.hpp
index/hnsw/: index.html
index/ivf/: index.html
index/qg/: index.html
kernel_ip/: index.html
python_bindings/: CMakeLists.txt  __init__.py  bindings_common.hpp  hnsw_bindings.cpp  ivf_bindings.cpp  rabitq_bindings.cpp  symqg_bindings.cpp
quick_start/: index.html
rabitq-rs/: Cargo.toml
rabitq-rs/src/: lib.rs
rabitq-rs/src/estimator/: mod.rs
rabitq-rs/src/quantizer/: mod.rs
rabitq-rs/src/rotator/: mod.rs
rabitq-rs/tests/: integration_test.rs
rabitq-sys/: Cargo.toml  build.rs  rabitq.h  rabitq_wrapper.cpp
rabitq-sys/src/: lib.rs
rabitq/estimator/: index.html
rabitq/quantizer/: index.html
rabitq/rabitq/: index.html
rabitq/reranking/: index.html
rabitq/rotator/: index.html
rabitqlib/: rabitq.hpp
rabitqlib/fastscan/: fastscan.hpp  highacc_fastscan.hpp
rabitqlib/index/: estimator.hpp
rabitqlib/index/ivf/: ivf.hpp
rabitqlib/quantization/: pack_excode.hpp
rabitqlib/utils/: hashset.hpp  rotator.hpp  simde-utils.hpp  space.hpp  warmup_space.hpp
rust/rabitq-rs/src/: lib.rs
rust/rabitq-rs/src/estimator/: mod.rs
rust/rabitq-rs/src/rotator/: mod.rs
rust/rabitq-sys/: build.rs  rabitq_wrapper.cpp
rust/rabitq-sys/src/: lib.rs
sample/: hnsw_rabitq_indexing.py  hnsw_rabitq_querying.cpp  hnsw_rabitq_querying.py  ivf_rabitq_indexing.py  ivf_rabitq_querying.cpp  ivf_rabitq_querying.py  symqg_indexing.py  symqg_querying.py
sample/python/: hnsw_rabitq_indexing.py  hnsw_rabitq_querying.py  ivf_rabitq_indexing.py  ivf_rabitq_querying.py  symqg_indexing.py  symqg_querying.py  utils.py
search/: search_index.json
tests/: CMakeLists.txt  test_init.cpp  test_ivf_rabitq.cpp
